--- a/public/index.html
+++ b/public/index.html
@@ -2,37 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>Trabalhando com Layouts</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/stylelayout.css">
   </head>
-<body>
-
-<h2>Formulário em HTML e CSS - Aula 2</h2>
-
-<form class="form" action="mailto:milla@apprendendo.blog">
-      <label for="nome">Nome:</label><br/>
-      <input type="text" id="nome" name="nome" placeholder="John"><br/>
-      <label for="sobrenome">Sobrenome:</label><br>
-      <input type="text" id="sobrenome" name="sobrenome" placeholder="Doe"><br/>
-      <label for="email">E-mail:</label><br/>
-      <input type="email" id="email" name="email" placeholder="Informe seu e-mail"><br/>
-      <label for="telefone">Telefone:</label><br/>
-      <input type="tel" id="telefone" name="telefone" placeholder="Informe seu telefone, com o DDD"><br/>
-      <label for="assunto">Assunto:</label><br/>
-      <input type="text" id="assunto" name="assunto" placeholder="Informe o Assunto"><br/>
-      <label for="mensagem">Mensagem:</label><br/>
-      <textarea type="text" id="mensagem" name="mensagem" placeholder="Informe a Mensagem"></textarea><br/>
-      <br/>
-      <div id="botoes">
-      	<div class="botao"><button type="reset" value="Limpar">Limpar</button></div>
-      	<div class="botao"><button type="submit" value="Enviar">Enviar</button></div>
-      </div>
-    </form> 
-    
-    <p>Se você clicar em "Enviar", este formulário enviará seus dados para o "milla@apprendendo.blog" e processá-los.</p>
-    </form>
-
-</body>
-</html>
+  <body>
+    <header>
+        <h1>Trabalhando com Layouts</h1>
+    </header>
+    <container>
+        <!---É aqui que vai entrar nosso conteudo-->
+    </container>
+  </body>
