--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,13 @@
     </header>
     <container>
         <!---É aqui que vai entrar nosso conteudo-->
+        <div id="dados_autor">
+          <p>Publicado por: Nome do Autor em 24/09/2024.</p>
+        </div>
+        <article>
+          <p>The Powerpuff Girls, (conhecido no Brasil como As Meninas Superpoderosas) é uma série de desenho animado estadunidense criada e escrita por Craig McCracken. Sucesso em todo o mundo, a série foi considerada a nova mania dos Estados Unidos durante o fim da década de 90 e inicio dos anos 2000 e teve um reboot de mesmo nome no ano de 2016.</p> 
+          <p>As 4 primeiras temporadas foram produzidas pela Hanna-Barbera, sendo essa a última série produzida pelo estúdio, que foi incorporado à Warner Bros. Animation em 2001.</p>
+          <p>Após a absorção do estúdio, a Cartoon Network Studios assume o lugar de produtora.</p>
+        </article>
     </container>
   </body>
