Inserir colunas com layout fixo

--- a/public/index.html
+++ b/public/index.html
@@ -23,4 +23,12 @@
           <p>Após a absorção do estúdio, a Cartoon Network Studios assume o lugar de produtora.</p>
         </article>
     </container>
+    <container>
+      <div class="coluna">
+        <!--É aqui que vamos trabalhar com circulos-->
+      </div>
+      <div class="coluna">
+        <!--Aqui também-->
+      </div>
+    </container>
   </body>
