Ajuste das Div de Header e Footer

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./assets/stylelayout.css">
   </head>
   <body>
-    <header>
+    <div class="header">
         <h1>Trabalhando com Layouts</h1>
-    </header>
+    </div>
     <div class="container">
         <!---É aqui que vai entrar nosso conteudo-->
         <div id="dados_autor">
@@ -30,5 +30,8 @@
       <div class="coluna">
         <!--Aqui também-->
       </div>
+    </div>
+    <div class="footer">
+      <p>2024. Professora Camila e o Apprendendo.blog. Todos os direitos reservados.</p>
     </div>
   </body>
