Conteudo da proxima aula

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         <!--Aqui também-->
       </div>
     </div>
+    <!---Proxima aula: separando o footer do conteudo -->
     <div class="footer">
       <p>2024. Professora Camila e o Apprendendo.blog. Todos os direitos reservados.</p>
     </div>
