Ajustar Hero da Pagina

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="./assets/stylelayout.css">
   </head>
   <body>
-    <div class="header">
-        <h1>Trabalhando com Layouts</h1>
-    </div>
+    <section class="hero">
+      <div class="hero-body">
+        <h1 class="title">Trabalhando com Layouts</h1>
+      </div>
+    </section>
     <div class="container">
         <!---É aqui que vai entrar nosso conteudo-->
         <div id="dados_autor">
