Ajuste de Posicionamento do HTML

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <section class="hero">
       <div class="hero-body">
-        <h1 class="title">Trabalhando com Layouts</h1>
+        <h1 class="title" style="text-align: center;">Trabalhando com Layouts</h1>
       </div>
     </section>
     <div class="container">
@@ -19,13 +19,14 @@
         <div id="dados_autor">
           <p>Publicado por: Nome do Autor em 24/09/2024.</p>
         </div>
-        <div id="article">
+        <div class="article">
           <p>The Powerpuff Girls, (conhecido no Brasil como As Meninas Superpoderosas) é uma série de desenho animado estadunidense criada e escrita por Craig McCracken. Sucesso em todo o mundo, a série foi considerada a nova mania dos Estados Unidos durante o fim da década de 90 e inicio dos anos 2000 e teve um reboot de mesmo nome no ano de 2016.</p> 
           <p>As 4 primeiras temporadas foram produzidas pela Hanna-Barbera, sendo essa a última série produzida pelo estúdio, que foi incorporado à Warner Bros. Animation em 2001.</p>
           <p>Após a absorção do estúdio, a Cartoon Network Studios assume o lugar de produtora.</p>
         </div>
       </div>
     <div class="container">
+      <div class="content">
       <div class="coluna">
         <!--É aqui que vamos trabalhar com circulos-->
       </div>
@@ -33,8 +34,9 @@
         <!--Aqui também-->
       </div>
     </div>
+    </div>
     <!---Proxima aula: separando o footer do conteudo -->
     <div class="footer">
-      <p>2024. Professora Camila e o Apprendendo.blog. Todos os direitos reservados.</p>
+      <p style="text-align: center;">2024. Professora Camila e o Apprendendo.blog. Todos os direitos reservados.</p>
     </div>
   </body>
